<resources>
    <string name="app_name">Blog</string>
    <string name="blog_setting">블로그 설정</string>
    <string name="like_button">좋아요 버튼</string>
    <string name="like_count">좋아요 갯수</string>
    <string name="comment_count">댓글 갯수</string>
    <string name="back_button">뒤로 가기 버튼</string>
    <string name="profile_image">프로필 이미지</string>
    <string name="post_image">게시글 이미지</string>
    <string name="post_content_hint">내용을 입력해주세요.</string>
    <string name="title">제목</string>
    <string name="comment_button">댓글 버튼</string>
    <string name="more_button">더보기 버튼</string>
    <string name="blog_background_image">블로그 배경 이미지</string>
    <string name="post_edit_button">글 수정 버튼</string>
    <string name="post_delete_button">글 삭제 버튼</string>
    <string name="finish">완료</string>
    <string name="enter_content">내용을 입력해주세요.</string>
    <string name="write_post_button">글 작성 버튼</string>
    <string name="number">%d</string>
    <string name="registration">등록</string>
    <string name="enter_comment">댓글을 입력하세요.</string>
    <string name="all_post">전체글</string>
    <string name="comment">댓글 %d</string>
    <string name="profile">프로필</string>
    <string name="nickname">닉네임</string>
    <string name="enter_nickname">닉네임을 입력하세요.</string>
    <string name="blog_name">블로그 이름</string>
    <string name="enter_blog_name">블로그 이름을 입력하세요.</string>
    <string name="introduction">소개글</string>
    <string name="enter_introduction">블로그 소개글을 입력하세요.</string>
</resources>