<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.blog.ui.write_post.WritePostViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.write_post.WritePostFragment">

        <ImageView
            android:id="@+id/f_write_post_iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/back_button"
            android:padding="10dp"
            android:src="@drawable/ic_close_36"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/f_post_detail_tv_finish"
            style="@style/Regular14Black"
            android:layout_width="70dp"
            android:layout_height="36dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_gray_rounder"
            android:gravity="center"
            android:text="@string/finish"
            app:layout_constraintBottom_toBottomOf="@id/f_write_post_iv_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/f_post_detail_tv_finish">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/f_write_post_et_title"
                    style="@style/Bold24Black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="50dp"
                    android:background="@null"
                    android:hint="@string/title"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="80"
                    android:text="@{viewModel.postData.title}"
                    android:textColorHint="@color/mid_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/f_write_post_et_content"
                    style="@style/Regular14Black"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@null"
                    android:hint="@string/enter_content"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:text="@{viewModel.postData.content}"
                    android:textAlignment="textStart"
                    android:textColorHint="@color/mid_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/f_write_post_et_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>